# guiding-center-motion

./: .gitignore  Collection.ipynb  Makefile  Many Particles.ipynb  Notebook.ipynb  Parabolas.py  Particle.py  README.md  Wiki.md  config.json  log.txt  parameters.py  parameters.yaml  pyproject.toml  requirements.txt  utils.py
.github/workflows/: documentation.yaml
Functions/: Electric_fields.py  Qfactors.py
Guiding Center Motion (White)/: GC_Functions.py  Guiding Center Motion - White.ipynb  Ομορφες αρχικές συνθήκες.txt
Source/: Parabolas.py  Particle.py  Particles.py  config.json  config.yaml  utils.py
docs/: Makefile  conf.py  index.rst
docs/_templates/autosummary/: class.rst  (+1 more)
examples/: wiki_example.ipynb  wiki_example.py
gcmotion/: __init__.py  animate.py  bfield.py  collection.py  config.py  config.yaml  efield.py  efields.py  fft.py  freq.py  parabolas.py  parabolas_old.py  particle.py  particles.py  plot.py  plots.py  qfactor.py  qfactors.py  signal_analysis.py  utils.py
gcmotion/classes/: collection.py  parabolas.py  particle.py  signal_analysis.py
gcmotion/configuration/: animation_parameters.py  physical_constants.py  plot_parameters.py  solver_configuration.py
gcmotion/plotters/: contour_energy.py  drift.py  drifts.py  parabolas.py  plot.py  time_evolution.py  tokamak_profile.py  torus2d.py  torus3d.py
gcmotion/scripts/: events.py  orbit.py
gcmotion/tokamak-config/: bfield.py
gcmotion/tokamak_config/: efield.py
gcmotion/utils/: _logger_setup.py  canonical_to_toroidal.py  logger-setup.py  pi_mod.py  utils.py
tests/: pip testing.py
